Revision history for File::DataClass

          - Fixed obscure syntax in ::Storage::txn_do
          - Deprecated name attribute in favour of id
          - Restored binmode default for NTFS

0.41.1    2014-05-28 11:27:00
          - Can now pass just a record name to find
          - Stopped txn_do from adding extra exception leader
          - Storage exceptions should be a full package name
          - Prevent duplicate IO layers
          - Attempting to fix tail test in win31

0.40.1    2014-05-22 10:35:56
          - Added head and tail methods to ::IO
          - Fixed PerlIO layers in ::IO
          - Using strict UTF-8 in ::IO

0.39.1    2014-05-16 09:17:58
          - 6fbe5176-dcb6-11e3-84c4-fc77f9652e90 Added Test::Requires
            Hash::MoreUtils

0.38.1    2014-05-15 01:09:50
          - cad362f6-dba6-11e3-84c4-fc77f9652e90 Random WTF

0.37.1    2014-05-13 22:04:43
          - Fixed crappy test. So system error messages can be garbage

0.36.1    2014-05-13 11:02:40
          - Improved test coverage
          - Added reverse attr to ::IO. Reverse sort directory listings

0.35.1    2014-05-01 15:28:33
          - Moo / Role::Tiny upgrade must expicitely use feature 'state'. Thanks
          - Call to n::s now excepts import
          - Moved location of namespace::clean calls. Yuck
          - Replaced JSON with JSON::MaybeXS
          - Deprecated ::IO::empty in favour of is_empty
          - Fixed ::IO::iterator sort order

0.34.1    2014-04-04 11:50:35
          - Improved test coverage
          - Fixed directory pattern match
          - Fixed definedness bug in ::HashMerge
          - JSON storage gives better error messages
          - Removed Ident: labels and VERSION

0.33.1    2014-01-24 20:54:00
          - Updated gitpre commit hook
          - Updated Unexpected dependency
          - Took ::Resulset find_and_update private

0.32.1    2014-01-15 17:17:35
          - Use Unexpected::Functions::has_exception not add_exception