@@ -2,8 +2,9 @@ name = File-DataClass
 
 [Prereqs]
 perl              = 5.010001
+namespace::autoclean = 0.19
 namespace::clean  = 0.24
-namespace::sweep  = 0.006
+strictures        = 1.004004
 Cache::FastMmap   = 1.40
 CHI               = 0.58
 Class::Method::ModifiersX::Augment = 0.001
